@@ -147,6 +147,13 @@ static PangoAttrClass gst_ttmlrender_pango_attr_invisibility_klass = {
   gst_ttmlrender_pango_attr_int_equal
 };
 
+static PangoAttrClass gst_ttmlrender_pango_attr_reverse_klass = {
+  PANGO_ATTR_INVALID, /* To be overwritten at init () */
+  gst_ttmlrender_pango_attr_int_copy,
+  gst_ttmlrender_pango_attr_int_destroy,
+  gst_ttmlrender_pango_attr_int_equal
+};
+
 PangoAttribute *
 gst_ttmlrender_pango_attr_overline_new (gboolean overline)
 {
@@ -159,6 +166,13 @@ gst_ttmlrender_pango_attr_invisibility_new (gboolean invisibility)
 {
   return gst_ttmlrender_pango_attr_int_new (
       &gst_ttmlrender_pango_attr_invisibility_klass, (int)invisibility);
+}
+
+PangoAttribute *
+gst_ttmlrender_pango_attr_reverse_new (gboolean reverse)
+{
+  return gst_ttmlrender_pango_attr_int_new (
+      &gst_ttmlrender_pango_attr_reverse_klass, (int)reverse);
 }
 
 /* Region compare function: Z index */
@@ -841,6 +855,23 @@ skip_font_size:
       /* This overwrites the attrs of the same type generated by pango markup */
       pango_attr_list_change (region->current_par_pango_attrs, pattr);
     }
+    attr = gst_ttml_style_get_attr (&span->style, GST_TTML_ATTR_UNICODE_BIDI);
+    if (attr && (attr->value.unicode_bidi == GST_TTML_UNICODE_BIDI_OVERRIDE)) {
+      /* If unicodeBidi == bidiOverride && direction == RTL, then we activate
+       * the reverse mode.
+       * FIXME: Fails for languages which are naturally RTL, which Pango handles
+       * correctly on its own. */
+      attr = gst_ttml_style_get_attr (&span->style, GST_TTML_ATTR_DIRECTION);
+      if (attr && (attr->value.direction == GST_TTML_DIRECTION_RTL)) {
+        PangoAttribute *pattr = gst_ttmlrender_pango_attr_reverse_new (TRUE);
+        pattr->start_index = region->current_par_content_plain_length;
+        pattr->end_index = region->current_par_content_plain_length + frag_len;
+        if (!region->current_par_pango_attrs) {
+          region->current_par_pango_attrs = pango_attr_list_new ();
+        }
+        pango_attr_list_change (region->current_par_pango_attrs, pattr);
+      }
+    }
 
     region->current_par_content_plain_length += frag_len;
     chars_left -= frag_len;
@@ -905,6 +936,7 @@ gst_ttmlrender_show_layout (cairo_t *cairo, PangoLayout *layout,
       double width = 0.0;
       int i;
       gboolean skip_run = FALSE;
+      gboolean reverse = FALSE;
       PangoGlyphItem *glyph_item = (PangoGlyphItem *)runs->data;
       GSList *extra_attrs;
       for (i = 0; i < glyph_item->glyphs->num_glyphs; i++) {
@@ -943,6 +975,10 @@ gst_ttmlrender_show_layout (cairo_t *cairo, PangoLayout *layout,
           }
           break;
         default:
+          /* reverse */
+          if (attr->klass == &gst_ttmlrender_pango_attr_reverse_klass) {
+            reverse = TRUE;
+          }
           break;
         }
         extra_attrs = extra_attrs->next;
@@ -1039,9 +1075,10 @@ gst_ttmlrender_show_layout (cairo_t *cairo, PangoLayout *layout,
         /* Render glyphs one by one, by overwritting the glyph_item */
         int i = 0;
         int n = glyph_item->glyphs->num_glyphs;
-        PangoGlyphInfo *gi = glyph_item->glyphs->glyphs;
+        PangoGlyphInfo *gi_original = glyph_item->glyphs->glyphs;
         glyph_item->glyphs->num_glyphs = 1;
         for (i = 0; i < n; i++) {
+          glyph_item->glyphs->glyphs = gi_original + (reverse ? n - 1 - i : i);
           cairo_save (cairo);
           cairo_translate (cairo,
               glyph_item->glyphs->glyphs->geometry.x_offset / (double)PANGO_SCALE,
@@ -1056,11 +1093,10 @@ gst_ttmlrender_show_layout (cairo_t *cairo, PangoLayout *layout,
           cairo_restore (cairo);
           cairo_translate (cairo,
               glyph_item->glyphs->glyphs->geometry.width / (double)PANGO_SCALE, 0);
-          glyph_item->glyphs->glyphs++;
         }
         /* Restore glyph_item to original values */
         glyph_item->glyphs->num_glyphs = n;
-        glyph_item->glyphs->glyphs = gi;
+        glyph_item->glyphs->glyphs = gi_original;
       }
       cairo_restore (cairo);
       cairo_translate (cairo, width, 0);
@@ -1545,6 +1581,8 @@ gst_ttmlrender_init (GstTTMLRender * render)
       pango_attr_type_register ("Overline");
   gst_ttmlrender_pango_attr_invisibility_klass.type =
       pango_attr_type_register ("Invisibility");
+  gst_ttmlrender_pango_attr_reverse_klass.type =
+      pango_attr_type_register ("Reverse");
 
   render->default_font_family = g_strdup ("Serif");
   render->default_font_size = NULL;
