@@ -25,6 +25,8 @@ extern const GstTTMLToken *GstTTMLUtilsTokensWrapOption;
 extern const GstTTMLToken *GstTTMLUtilsTokensShowBackground;
 extern const GstTTMLToken *GstTTMLUtilsTokensTimeBase;
 extern const GstTTMLToken *GstTTMLUtilsTokensClockMode;
+extern const GstTTMLToken *GstTTMLUtilsTokensUnicodeBIDI;
+extern const GstTTMLToken *GstTTMLUtilsTokensDirection;
 extern const GstTTMLToken *GstTTMLUtilsTokensSMPTEImageType;
 extern const GstTTMLToken *GstTTMLUtilsTokensSMPTEEncoding;
 
